--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -9,6 +9,8 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@celo/abis": "^11.0.0",
+        "@celo/identity": "^5.1.2",
         "@headlessui/react": "^1.7.14",
         "@heroicons/react": "^2.0.18",
         "@rainbow-me/rainbowkit": "^2.0.2",
@@ -18,7 +20,8 @@
         "next": "^13.4.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "viem": "2.8.18",
+        "sonner": "^1.5.0",
+        "viem": "^1.21.4",
         "wagmi": "2.5.12"
     },
     "devDependencies": {
