--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -19,7 +19,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "sonner": "^1.5.0",
-        "viem": "^2.17.3",
+        "viem": "1",
         "wagmi": "2.5.12"
     },
     "devDependencies": {
