--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -14,6 +14,7 @@
         "@rainbow-me/rainbowkit": "^2.0.2",
         "@tanstack/react-query": "^5.28.6",
         "@wagmi/connectors": "4.1.18",
+        "dotenv": "^16.4.5",
         "ethers": "^5.7.2",
         "next": "^13.4.2",
         "react": "18.2.0",
